feilds names modified

--- a/contactsApp/views/contact/display_all_contacts.pug
+++ b/contactsApp/views/contact/display_all_contacts.pug
@@ -16,6 +16,6 @@ block content
           tr
             td= contact.firstName
             td= contact.lastName
-            td= contact.email
+            td= contact.emailAddress
             td
               a(href=`/contacts/${contact.id}`, class='view-contact-link') View
