--- a/contactsApp/views/contact/edit_contact.pug
+++ b/contactsApp/views/contact/edit_contact.pug
@@ -8,8 +8,8 @@ block content
       input(type='text', name='firstName', value=contact.firstName, required)
       label(for='lastName') Last Name:
       input(type='text', name='lastName', value=contact.lastName, required)
-      label(for='email') Email Address:
-      input(type='email', name='email', value=contact.email)
+      label(for='emailAddress') Email Address:
+      input(type='email', name='emailAddress', value=contact.emailAddress)
       label(for='notes') Notes:
       textarea(name='notes')= contact.notes
       button(type='submit') Update Contact
