--- a/contactsApp/views/contact/create_contact.pug
+++ b/contactsApp/views/contact/create_contact.pug
@@ -8,8 +8,8 @@ block content
       input(type='text', name='firstName', required)
       label(for='lastName') Last Name:
       input(type='text', name='lastName', required)
-      label(for='email') Email Address:
-      input(type='email', name='email')
+      label(for='emailAddress') Email Address:
+      input(type='email', name='emailAddress')
       label(for='notes') Notes:
       textarea(name='notes')
       button(type='submit') Create Contact
